fix some header errors and add scrollbar

--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 
 .container {
     width: var(--default-layout-width);
+    margin-top: var(--default-layout-header-height);
     padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
 }
